--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aryan Pandey</title>
     <link rel="shortcut icon" href="img/favicon.svg" type="image/svg">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/phonestyle.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="phonestyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
