--- a/index.html
+++ b/index.html
@@ -222,10 +222,11 @@
             allowfullscreen></iframe>
 
         <div class="languagebox" id="languagebox">
+            <div class="morebox"><img src="img/plimg.png" alt="" class="moreboxicon"></div>
             <div class="morebox"><img src="Img/html-5.png" alt="" class="moreboxicon"></div>
             <div class="morebox"><img src="Img/css.png" alt="" class="moreboxicon"></div>
             <div class="morebox"><img src="Img/js.png" alt="" class="moreboxicon"></div>
-            <div class="morebox"><img src="img/python.png" alt="" class="moreboxicon"></div>
+            
             <div class="morebox"><img src="Img/sql-server.png" alt="" class="moreboxicon"></div>
         </div>
 
