--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             allowfullscreen></iframe>
 
         <div class="languagebox" id="languagebox">
-            <div class="morebox"><img src="img/plimg.png" alt="" class="moreboxicon"></div>
+            <div class="morebox"><img src="img/html.png" alt="" class="moreboxicon"></div>
             <div class="morebox"><img src="Img/html-5.png" alt="" class="moreboxicon"></div>
             <div class="morebox"><img src="Img/css.png" alt="" class="moreboxicon"></div>
             <div class="morebox"><img src="Img/js.png" alt="" class="moreboxicon"></div>
